dist/pfapi/Service.pfapi.yaml
apiVersion: v1
kind: Service
metadata:
  name: pfapi
  namespace: pfapi
spec:
  externalIPs: []
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: https
      port: 443
      targetPort: 443
  selector:
    cdk8s.io/metadata.addr: pfapi-app-pfapi-app-deployment-c872ea4e
  type: ClusterIP
