dist/pfapi/Ingress.pfapi.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    cmdcentral.xyz/external: "true"
  name: pfapi
  namespace: pfapi
spec:
  rules:
    - host: pfapi.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: pfapi
                port:
                  number: 8080
            path: /
            pathType: Prefix
    - host: pfapi.whizkid.dev
      http:
        paths:
          - backend:
              service:
                name: pfapi
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - pfapi.cmdcentral.xyz
        - pfapi.whizkid.dev
      secretName: pfapi-tls
